# Portable-Drive-Baby-Sitter

./: CONTRIBUTING.md  COPYRIGHT.txt  FAQ.txt  File Inventory.md  LICENSE  README.md  manifest.md
installer_source/: install.bat
installer_source/c++/par2cmdline-turbo/: Makefile.am  libpar2.vcxproj  libpar2.vcxproj.filters  mkinstalldirs
installer_source/c++/par2cmdline-turbo-mod/: !BuildNotes.txt
installer_source/c++/par2cmdline-turbo-mod/x64/Release/par2cmdline/: par2.exe.recipe
installer_source/c++/par2cmdline-turbo-mod/x64/Release/par2cmdline/par2cmdline.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  link.secondary.1.tlog
installer_source/c++/par2cmdline-turbo/parpar/: gf16.vcxproj  hasher.vcxproj
installer_source/c++/par2cmdline-turbo/parpar/gf16/: gf16_muladd_multi.h  gf16_neon_common.h  gf16_rvv_common.h  gf16_shuffle.h  gf16_shuffle128_rvv.c  gf16_shuffle128_sve.c  gf16_shuffle128_sve2.c  gf16_shuffle128_sve_common.h  gf16_shuffle2x128_sve2.c  gf16_shuffle2x_x86.h  gf16_shuffle512_sve2.c  gf16_shuffle_avx.c  gf16_shuffle_avx2.c  gf16_shuffle_avx512.c  gf16_shuffle_neon.c  gf16_shuffle_ssse3.c  gf16_shuffle_vbmi.c  gf16_shuffle_x86.h  gf16_shuffle_x86_common.h  gf16_shuffle_x86_prepare.h  gf16_sve_common.h  gf16_xor.h  gf16_xor_avx2.c  gf16_xor_avx512.c  gf16_xor_common.h  gf16_xor_common_funcs.h  gf16_xor_sse2.c  gf16mul.cpp  gf16mul.h  gf16pmul.cpp  gf16pmul.h  gf16pmul_avx2.c  gf16pmul_neon.c  gf16pmul_rvv.c  gf16pmul_sse.c  gf16pmul_sve2.c  gf16pmul_vpclgfni.c  gf16pmul_vpclmul.c  gf16pmul_x86.h  gfmat_coeff.c  (+7 more)
installer_source/c++/par2cmdline-turbo/parpar/gf16/opencl-include/: cl.c  cl.h  readme.txt
installer_source/c++/par2cmdline-turbo/parpar/gf16/opencl-include/CL/: cl.h  cl_platform.h  opencl.hpp
installer_source/c++/par2cmdline-turbo/parpar/gf16/x64/Release/gf16.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  gf16.lastbuildstate
installer_source/c++/par2cmdline-turbo/parpar/hasher/: crc_arm.h  crc_clmul.h  crc_rvzbc.h  crc_slice4.h  crc_zeropad.c  crc_zeropad.h  hasher.cpp  hasher.h  hasher_armcrc.cpp  hasher_avx2.cpp  hasher_avx512.cpp  hasher_avx512vl.cpp  hasher_bmi1.cpp  hasher_clmul.cpp  hasher_input.cpp  hasher_input.h  hasher_input_base.h  hasher_input_impl.h  hasher_input_stub.h  hasher_md5crc.cpp  hasher_md5crc.h  hasher_md5crc_base.h  hasher_md5crc_impl.h  hasher_md5crc_stub.h  hasher_md5mb.cpp  hasher_md5mb.h  hasher_md5mb_base.h  hasher_md5mb_impl.h  hasher_md5mb_stub.h  hasher_neon.cpp  hasher_neoncrc.cpp  hasher_rvzbc.cpp  hasher_scalar.cpp  hasher_sse.cpp  hasher_sve2.cpp  hasher_xop.cpp  md5-arm-asm.h  md5-arm64-asm.h  md5-avx512-asm.h  md5-avx512.h  (+20 more)
installer_source/c++/par2cmdline-turbo/parpar/hasher/x64/Release/hasher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
installer_source/c++/par2cmdline-turbo/parpar/src/: cpuid.h  hedley.h  platform.h  platform_warnings.c  stdint.h
installer_source/c++/par2cmdline-turbo/x64/Release/par2cmdline/par2cmdline.tlog/: link.command.1.tlog  link.write.1.tlog
installer_source/c++/src/: FileListGen.rc  baselineXML_estimate.cpp  baselineXML_estimate.rc  deviceinfo.rc  sign_all.bat
installer_source/files/: !VERIFY_INTEGRITY.BAT  Drive_Status.xml  manifest.md
installer_source/files/reports/: reports.txt
installer_source/files/scripts/: create_baselineXML.ps1  create_recovery.ps1  full_surface_scan.bat  generate_report.ps1  pager.ps1  pshell.bat  quick_file_check.ps1  quick_surface_scan.bat
